--- a/package.json
+++ b/package.json
@@ -9,102 +9,97 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "latest",
-    "@ai-sdk/google": "latest",
-    "@ai-sdk/openai": "latest",
-    "@auth/core": "latest",
-    "@aws-sdk/client-s3": "latest",
-    "@google/generative-ai": "latest",
+    "@ai-sdk/anthropic": "^0.0.16",
+    "@ai-sdk/google": "^0.0.13",
+    "@ai-sdk/openai": "^0.0.24",
+    "@auth/core": "^0.34.2",
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@google/generative-ai": "^0.17.1",
     "@hookform/resolvers": "^3.9.1",
-    "@octokit/rest": "latest",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "latest",
-    "@radix-ui/react-context-menu": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-hover-card": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "latest",
-    "@radix-ui/react-navigation-menu": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toast": "latest",
-    "@radix-ui/react-toggle": "latest",
-    "@radix-ui/react-toggle-group": "latest",
-    "@radix-ui/react-tooltip": "latest",
-    "@reduxjs/toolkit": "latest",
-    "@socket.io/redis-adapter": "latest",
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
-    "@tiptap/core": "latest",
-    "@tiptap/extension-collaboration": "latest",
-    "@tiptap/extension-collaboration-cursor": "latest",
-    "@tiptap/extension-comment": "latest",
-    "@tiptap/extension-suggestion": "latest",
-    "@tiptap/pm": "latest",
-    "@tiptap/react": "latest",
-    "@tiptap/starter-kit": "latest",
-    "@vercel/blob": "latest",
-    "ai": "latest",
+    "@octokit/rest": "^20.1.1",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tiptap/core": "^2.8.0",
+    "@tiptap/extension-collaboration": "^2.8.0",
+    "@tiptap/extension-collaboration-cursor": "^2.8.0",
+    "@tiptap/extension-comment": "^2.8.0",
+    "@tiptap/extension-suggestion": "^2.8.0",
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "@vercel/blob": "^0.23.4",
+    "ai": "^3.4.7",
     "autoprefixer": "^10.4.20",
-    "axios": "latest",
-    "bcryptjs": "latest",
-    "cheerio": "latest",
-    "child_process": "latest",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "latest",
-    "crypto": "latest",
-    "date-fns": "latest",
-    "embla-carousel-react": "latest",
-    "express": "latest",
-    "express-rate-limit": "latest",
-    "fs": "latest",
-    "http-proxy-middleware": "latest",
-    "input-otp": "latest",
-    "jsonwebtoken": "latest",
+    "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.3.0",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "http-proxy-middleware": "^3.0.3",
+    "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
-    "mammoth": "latest",
+    "mammoth": "^1.8.0",
     "next": "15.2.4",
-    "next-auth": "latest",
-    "next-themes": "latest",
-    "nodemailer": "latest",
-    "os": "latest",
-    "path": "latest",
-    "pdf-parse": "latest",
+    "next-auth": "^4.24.10",
+    "next-themes": "^0.4.3",
+    "nodemailer": "^6.9.16",
+    "pdf-parse": "^1.1.1",
     "react": "^19",
-    "react-day-picker": "latest",
+    "react-day-picker": "^9.2.2",
     "react-dom": "^19",
-    "react-dropzone": "latest",
-    "react-hook-form": "latest",
-    "react-markdown": "latest",
-    "react-redux": "latest",
-    "react-resizable-panels": "latest",
-    "recharts": "latest",
-    "redis": "latest",
-    "redux": "latest",
-    "socket.io": "latest",
-    "socket.io-adapter": "latest",
-    "sonner": "latest",
-    "stripe": "latest",
+    "react-dropzone": "^14.2.9",
+    "react-hook-form": "^7.53.2",
+    "react-markdown": "^9.0.1",
+    "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.1.4",
+    "recharts": "^2.12.7",
+    "redis": "^4.7.0",
+    "redux": "^5.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-adapter": "^2.5.5",
+    "sonner": "^1.7.3",
+    "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "latest",
-    "vaul": "latest",
-    "y-prosemirror": "latest",
-    "zod": "latest"
+    "uuid": "^10.0.0",
+    "vaul": "^1.0.0",
+    "y-prosemirror": "^1.2.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22",
